# ClankerClocker

./: LICENSE  index.html  package-lock.json  package.json  pb_schema.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: CHANGELOG.md  macos-unsigned-release.md
kit/: site.webmanifest
pb_hooks/: auto_clockout.pb.js
public/audio/: README.md
scripts/: install-macos-unsigned.sh  set-version.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: ClankerClocker.desktop
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  pocketbase.rs  session.rs
src-tauri/src/monitor/: input.rs  network.rs  window.rs
src/components/: About.svelte  AdminView.svelte  Dashboard.svelte  Login.svelte  Settings.svelte
src/lib/: app-meta.ts  stores.ts  types.ts
