[package]
name = "clankerclocker"
version = "1.0.0"
description = "ClankerClocker - Employee Time & Activity Tracker"
authors = ["scelester"]
edition = "2021"

[lib]
name = "clankerclocker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sysinfo = "0.34"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
anyhow = "1"
dns-lookup = "2"
urlencoding = "2"
tauri-plugin-notification = "2.3.3"

# Linux: evdev for raw kernel input (works on X11 and Wayland)
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

# macOS + Windows: rdev uses platform accessibility APIs
[target.'cfg(not(target_os = "linux"))'.dependencies]
rdev = "0.5.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_ProcessStatus",
] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
